--- a/rsappQ3/index.html
+++ b/rsappQ3/index.html
@@ -8,7 +8,11 @@
   </head>
   <script src="./js.js"></script>
   <body>
-    <div style="text-align: center">Hello</div>
+    <ul>
+      <li>Microsoft</li>
+      <li>Google</li>
+      <li>Apple</li>
+      <li>IBM</li>
+    </ul>
   </body>
-  
 </html>
